# opium-demo

./: CONTRIBUTING.md  Makefile  README.md  dune-project  opium-demo.opam
.github/workflows/: ci.yml
lib/opium_demo/: config.ml  db.ml  db.mli  dune  opium_demo.ml
lib/opium_demo/accounts/: accounts.ml  user.ml  user_notifier.ml  user_token.ml
lib/opium_demo_web/: dune  opium_demo_web.ml  router.ml
lib/opium_demo_web/handlers/: dune  page.ml  user_auth.ml  user_confirmation.ml  user_registration.ml  user_reset_password.ml  user_session.ml  user_settings.ml
lib/opium_demo_web/middlewares/: dune  user_auth.ml
lib/opium_demo_web/views/: context.ml  dune  layout.ml  page.ml  user_confirmation.ml  user_registration.ml  user_reset_password.ml  user_session.ml  user_settings.ml
migration/: 20200424154423_create_users_table.down.sql  20200424154423_create_users_table.up.sql  20200424154424_create_user_tokens_table.down.sql  20200424154424_create_user_tokens_table.up.sql
test/opium_demo/: accounts_test.ml  dune
test/opium_demo_web/: dune  user_auth_test.ml  user_confirmation_test.ml  user_registration_test.ml  user_reset_password_test.ml  user_session_test.ml  user_settings_test.ml
test/support/: dune  test_utils.ml
